feat: Add terms-conditions page

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -141,7 +141,7 @@
       "whatsapp": "واتس آب"
     },
     "bottom": {
-      "privacy": "سياسة الخصوصية",
+      "privacy": "الشروط والأحكام",
       "terms": "شروط الاستخدام",
       "contact": "اتصل بنا"
     },
@@ -201,12 +201,10 @@
     "snap": "سنابشات",
     "whats": "واتس اب",
     "tiktok": "تيك توك"
+  },
+    "terms":{
+    "Title": "الشروط والأحكام",
+    "SubTitle": "يرجى قراءة هذه الشروط والأحكام بعناية قبل استخدام الموقع أو الخدمات."
   }
-
-
-
-
-
-
 
 }
