Add Helpinregister Page

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -4,7 +4,7 @@
     "about": "من نحن",
     "myOrders": "طلباتي",
     "faqs": "الاسئلة الشائعة",
-    "services": "خدماتنا",
+    "services": "خدمات الشركة",
     "contact": "اتصل بنا",
     "login": "تسجيل الدخول",
     "howWeWork": "كيف نعمل",
@@ -90,8 +90,8 @@
     "compassDesc": "اتجاه القبلة حسب موقعك واتجاه جهازك"
   },
   "faqs": {
-    "Title": "الأسئلة الشائعة والإرشادات",
-    "SubTitle": "كل ما تحتاج معرفته عن رحلتك",
+  "Title": "خدمات الشركة",
+  "SubTitle": "كل ما تحتاج معرفته عن خدماتنا",
     "guides": "الدليل التوعوي والإرشادي",
     "mostCommon": "الأسئلة الأكثر شيوعًا",
     "carTravelers": "القادمون بسياراتهم",
@@ -105,7 +105,7 @@
     "title": "رحلتك الإيمانية",
     "subtitle": "تبدأ من هنا",
     "description": "نقدم في الحميري خدمات حج وعمرة متكاملة بأعلى معايير الراحة والأمان لضيوف الرحمن.",
-    "readMore": "اعرف المزيد",
+    "helpinregister": "مساعدة في التسجيل",
     "contactUs": "تواصل معنا",
     "stats": {
       "experience": "سنة خبرة",
@@ -145,7 +145,7 @@
     },
     "bottom": {
       "privacy": "الشروط والأحكام",
-      "terms": "شروط الاستخدام",
+      "help": "مساعدة في التسجيل",
       "contact": "اتصل بنا"
     },
     "rights": "جميع الحقوق محفوظة"
@@ -215,7 +215,15 @@
   "values": "القيم",
   "mission": "الرسالة",
   "vision": "الرؤية"
-}
+},
+  "helpRegister": {
+    "title": "المساعدة في التسجيل",
+    "subtitle": "الحصول على المساعدة من منسقي خدمات الحجاج",
+    "supervisorsTitle": "للمساعدة في التسجيل ومنسقي خدمات الحجاج",
+    "noteTitle": "ملحوظة",
+    "mediaTitle": "صور وفيديو لطريقة التسجيل في المسار الإلكتروني"
+  }
+
 
 
 }
